# basic_python

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  control.sh  docker-compose.yml  pyproject.toml  requirements.pip
dev/: freeze_pip.sh
entrypoint/: djangoup
k8s/: dev-values.yaml  prod-values.yaml  test-values.yaml
k8s/project/: Chart.yaml  values.yaml
k8s/project/templates/: NOTES.txt  cronjob.yaml  deployment.yaml  ingress.yaml  pre-install-hook.yaml  service.yaml
src/: app.py  entrypoint.sh  hello.py
tests/: test_main.py
tools/: env.sh
utils/: convert_env.py  test_utils.py
