[tool.poetry]
name = "basic_python"
version = "0.1.0"
description = "Python project template with needed DevOps tools"
authors = ["Nikolay Baryshnikov <root@k0d.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.3.4"
ipython = "^7.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
